--- a/estilos.css/estilos.css
+++ b/estilos.css/estilos.css
@@ -1,6 +1,6 @@
 body 
 {
-    color: aquamarine;
+    color: blue;
     text-align: center;
     font-family: Times New Roman;
     font-size: 16px;
