--- a/estilos.css/estilos.css
+++ b/estilos.css/estilos.css
@@ -1,6 +1,7 @@
 body 
 {
-    color: blue;
+    background: wheat;
+    color: #333;
     text-align: center;
     font-family: Times New Roman;
     font-size: 16px;
@@ -11,22 +12,27 @@ body
 #cabecera
 {
     background: aquamarine;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,5);
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding; 0.5em;
+    padding: 0.5em;
+}
+#cabecera #logo 
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
     font-weight: normal;
-    font-size; 0.8em;
+    font-size: 0.8em;
 }
 #container
 {
     width: 70%;
-    padding: 0em;
+    padding: 0;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -38,5 +44,6 @@ body
 }
 #post
 {
+    background: whitesmoke;
     padding: 1em;
 }
