--- a/css1/estilos1.css
+++ b/css1/estilos1.css
@@ -2,8 +2,8 @@ body
 {
     color: deeppink;
     text-align: center;
-    font-family: Arial;
-    font-sizer: 16px;
+    font-family: "Arial";
+    font-size: 16px;
     margin: 0;
     padding: 0;
 }
@@ -14,7 +14,7 @@ body
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5cm;
 }
 #cabecera #tagline
 {
@@ -25,7 +25,7 @@ body
 #container
 {
     width: 70%;
-    padding: 0;
+    padding: 0cm;
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
