--- a/css1/estilos1.css
+++ b/css1/estilos1.css
@@ -3,7 +3,7 @@ body
     color: deeppink;
     text-align: center;
     font-family: "Arial";
-    font-size: 16px;
+    font-sizer: 16px;
     margin: 0;
     padding: 0;
 }
