--- a/css1/estilos1.css
+++ b/css1/estilos1.css
@@ -1,6 +1,7 @@
 body
 {
-    color: violet;
+    background: #8092ee;
+    color: #333;
     text-align: center;
     font-family: Arial;
     font-size: 16px;
@@ -10,21 +11,27 @@ body
 
 #cabecera
 {
-    background: #33A;
-    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
-    color: white;
-    font-weight: bold;
+    background: #37488b;
+    box-shadow: 0 2px 20px 0 rgba(0,0,0,0.5);
+    color: #fff;
+    font-weight: 700;
     margin: 0;
     padding: 0.5em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align:middle
 }
 
 #cabecera #tagline
 {
     padding: 0 0 0 1em;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 0.8em;
 }
-
+    
 #container
 {
     width: 70%;
@@ -41,5 +48,6 @@ body
 
 #post
 {
+    background: #fff;
     padding: 1em;
 }
